--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ a:visited {
     background: #212731;
     border-radius: 8px;
     font-size: 1.3rem;
-    margin: 9.5px;
+    margin: 9.5px 9.5px 0px 9.5px;
 }
 
 .main {
@@ -147,6 +147,10 @@ a:visited {
     .banner-img {
         margin-left: 5px;
     }
+
+    .sidebar {
+        margin: 33px 30px 0px 33px;
+    }
 }
 
 @media (max-width: 1024px) {
@@ -166,7 +170,12 @@ a:visited {
     .media {
         display: none;
     }
+
     .banner-img {
         margin-left: 5px;
+    }
+    
+    .sidebar {
+        margin: 33px 30px 0px 33px;
     }
 }
