--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,21 @@
 * {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
+}
 
-  body {
+body {
     background-color: #050c17;
-  }
-  
-  h1, h2, h3, p, li {
+}
+
+h1,
+h2,
+h3,
+p,
+li {
     color: aliceblue;
 }
 
-a:link, a:hover {
+a:link,
+a:hover {
     color: aqua;
     text-decoration: none;
 }
@@ -24,7 +29,7 @@ a:visited {
     margin-left: 250px;
 }
 
-.container > div {
+.container>div {
     margin: 10px;
     padding: 20px;
     font-size: 1.3rem;
@@ -58,14 +63,15 @@ a:visited {
     background: #212731;
 }
 
-.media > iframe {
+.media>iframe {
     border-radius: 15px;
     display: block;
     /*border: 1px solid aliceblue;*/
     text-align: center;
 }
 
-.sidebar a, h3 {
+.sidebar a,
+h3 {
     display: block;
     padding: 10px 15px;
     text-decoration: none;
@@ -91,60 +97,63 @@ a:visited {
 }
 
 .wrapper {
-    position: relative; /* Ensure elements are properly stacked */
-  }
+    position: relative;
+    /* Ensure elements are properly stacked */
+}
 
-  .feed {
+.feed {
     margin-top: 20px;
-  }
+}
 
-  .active {
+.active {
     background-color: #04AA6D;
-  }
+}
 
-  .navbar > ul {
+.navbar>ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #212731;
     border-radius: 8px;
-  }
+}
 
-  .navbar > ul li {
+.navbar>ul li {
     float: left;
-  }
+}
 
-  .navbar > ul li a {
+.navbar>ul li a {
     display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-  }
+}
 
-  .navbar > ul li a:hover:not(.active) {
+.navbar>ul li a:hover:not(.active) {
     background-color: #575757;
-  }
+}
 
 @media (max-width: 768px) {
     .sidebar {
         position: static;
         text-align: center;
     }
+
     .container {
         margin: 0;
         padding: 0;
         flex-direction: column;
     }
-    .media > iframe {
+
+    .media>iframe {
         width: 100%;
     }
 
     .media {
         display: none;
     }
-    
+
     .banner-img {
         margin-left: 20px;
     }
@@ -159,12 +168,14 @@ a:visited {
         position: static;
         text-align: center;
     }
+
     .container {
         margin: 0;
         padding: 0;
         flex-direction: column;
     }
-    .media > iframe {
+
+    .media>iframe {
         width: 100%;
     }
 
@@ -175,7 +186,7 @@ a:visited {
     .banner-img {
         margin-left: 50px;
     }
-    
+
     .sidebar {
         margin: 33px 30px 0px 33px;
     }
