--- a/css/style.css
+++ b/css/style.css
@@ -89,11 +89,11 @@ h3 {
 }
 
 .banner-img {
-    max-width: 100%;
+    max-width: 80%;
     height: auto;
     object-fit: scale-down;
-    clip-path: inset(0% 15% 13% 1% round 10px);
-    margin-left: 55px;
+    clip-path: inset(0% 4% 8% 0% round 10px);
+    margin-left: 12%;
 }
 
 .wrapper {
@@ -134,7 +134,7 @@ h3 {
     background-color: #575757;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
     .sidebar {
         position: static;
         text-align: center;
@@ -155,7 +155,7 @@ h3 {
     }
 
     .banner-img {
-        margin-left: 20px;
+        margin-left: 12%;
     }
 
     .sidebar {
@@ -163,7 +163,7 @@ h3 {
     }
 }
 
-@media (min-width: 769px) and (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 1023px) {
     .sidebar {
         position: static;
         text-align: center;
@@ -184,7 +184,7 @@ h3 {
     }
 
     .banner-img {
-        margin-left: 50px;
+        margin-left: 12%;
     }
 
     .sidebar {
