--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,10 @@ a:visited {
     color: aquamarine;
 }
 
+iframe {
+    border: none;
+}
+
 .container {
     display: flex;
     margin-left: 250px;
